istio/1-hello.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: hello
  labels:
    app: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: learnistio/helloworld:1.0.0
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
spec:
  selector:
    app: hello
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello
  namespace: hello
spec:
  hosts:
  - '*'
  gateways:
    - istio-ingress/ingress-gateway-1
  http:
  - route:
    - destination:
        host: hello.hello.svc.cluster.local
        port:
          number: 80
